photo size and text align fix

--- a/main.css
+++ b/main.css
@@ -246,6 +246,11 @@ color: red;*/
             }
             .container {
                 margin: 0 auto;
+                max-width: 600px;
+            }
+            .photo-container {
+                max-width: 700px;
+                margin: 0 auto;
             }
             #circle-ring {
                 position: absolute;
